--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -19,33 +19,38 @@
         </h1>
     </header>
     <main>
-        <h2>Create a To-Do item</h2>
+
         <div class="box-container-todo">       
             
             <!-- Form fields -->
             <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Name</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Type a name to-do...">
+                <label for="todo_name_field" class="form-label">Name</label>
+                <input type="email" class="form-control" id="todo_name_field" placeholder="Type a name to-do...">
             </div>
 
             <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Description</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="Type a description here..."></textarea>
+                <label for="todo_description_field" class="form-label">Description</label>
+                <textarea class="form-control" id="todo_description_field" rows="5" placeholder="Type a description here..."></textarea>
             </div>
 
             <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" role="switch" name="todo_done" id="todo_done">
-                <label class="form-check-label" for="todo_done">Done</label>
+                <input class="form-check-input" type="checkbox" role="switch" name="todo_done" id="todo_done_field">
+                <label class="form-check-label" for="todo_done_field">Done</label>
             </div>
             
             <select class="form-select" aria-label="Default select example">
-                <option selected>Select a priority...</option>
+                <option selected id="todo_priority_field">Select a priority...</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
                 <option value="4">4</option>
                 <option value="5">5</option>
             </select>
+
+            <div class="box-result">
+                <button type="button" class="btn btn-secondary btn-sm" id="btn-save" onclick="createTodoItem()">Save</button>
+                <button type="button" class="btn btn-secondary btn-sm" id="btn-clean" onclick="cleanFormTodoItem()">Clean</button>
+            </div>
 
         </div>
 
@@ -56,7 +61,7 @@
 
         <!-- Data return from API -->
         <div class="box-result">
-
+            <button type="button" class="btn btn-secondary btn-sm">Back </button>
         </div>
 
     </main>
