change pom configCors, adjust tests and html and functions from js

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -81,19 +81,19 @@
             </div>
         </div>
 
-        <!-- Loading icon -->
+        <!-- Loading spinner icon -->
         <div class="spinner-grow" role="status">
             <span class="visually-hidden" id="spinner">Loading...</span>
         </div>
 
-        <!-- Data return from API listing todos from the list -->
+        <!-- Returning all todos -->
         <div class="box-result-all-todos">
-            <button type="button" class="btn btn-secondary btn-sm">Back</button>
+            <button type="button" class="btn btn-secondary btn-sm" id="btn-back" onclick="back()">Back 1</button>
         </div>
 
-        <!-- Data return from API listing just that one created -->
+        <!-- Returning a todo created -->
         <div class="box-result-todo-created">
-            <button type="button" class="btn btn-secondary btn-sm">Back</button>
+            <button type="button" class="btn btn-secondary btn-sm">Back 2</button>
         </div>
 
     </main>
