--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-            crossorigin="anonymous"
-    >
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>ToDo List</title>
 </head>
+
 <body>
     <header>
         <h1>
@@ -21,11 +19,11 @@
     <main>
 
         <div class="box-container-todo">
-            
+
             <div class="box-container-todo-tips">
                 <h2>Item To-Do</h2>
             </div>
-            
+
             <!-- Name field -->
             <div class="mb-3">
                 <label for="todo_name_field" class="form-label">Name</label>
@@ -35,17 +33,20 @@
             <!-- Description field -->
             <div class="mb-3">
                 <label for="todo_description_field" class="form-label">Description</label>
-                <textarea class="form-control" id="todo_description_field" rows="5" placeholder="Type a description here..."></textarea>
+                <textarea class="form-control" id="todo_description_field" rows="5"
+                    placeholder="Type a description here..."></textarea>
             </div>
 
             <!-- Done toggle -->
             <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" role="switch" name="todo_done_field" id="todo_done_field">
+                <input class="form-check-input" type="checkbox" role="switch" name="todo_done_field"
+                    id="todo_done_field">
                 <label class="form-check-label" for="todo_done_field">Done</label>
             </div>
 
             <!-- Priority field -->
-            <select class="form-select" aria-label="Default select example" name="todo_priority_field" id="todo_priority_field">
+            <select class="form-select" aria-label="Default select example" name="todo_priority_field"
+                id="todo_priority_field">
                 <option selected name="todo_priority_field">Select a priority...</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
@@ -56,14 +57,16 @@
 
             <!-- Buttons from todoList form -->
             <div class="box-container-todo-buttons">
-                <button type="button" class="btn btn-secondary btn-sm" id="btn-save" onclick="createTodoItem()">Save</button>
-                <button type="button" class="btn btn-secondary btn-sm" id="btn-clean" onclick="cleanFormTodoItem()">Clean</button>
+                <button type="button" class="btn btn-secondary btn-sm" id="btn-save-create"
+                    onclick="createTodoItem()">Save</button>
+                <button type="button" class="btn btn-secondary btn-sm" id="btn-clean-create"
+                    onclick="cleanFormTodoItem()">Clean</button>
             </div>
 
         </div>
 
         <!-- Search todos by ID -->
-        <div class="box-container-todo-list">
+        <div class="box-container-todo-list" id="searchByIdSection">
 
             <div class="box-container-todo-list-tips">
                 <h2>Seach your ToDo</h2>
@@ -76,8 +79,10 @@
 
             <!-- Buttons from todoList form -->
             <div class="box-container-todo-list-buttons">
-                <button type="button" class="btn btn-secondary btn-sm" id="btn-save" onclick="searchByID()">Search</button>
-                <button type="button" class="btn btn-secondary btn-sm" id="btn-clean" onclick="cleanID()">Clean</button>
+                <button type="button" class="btn btn-secondary btn-sm" id="btn-save-search"
+                    onclick="searchByID(todoId)">Search</button>
+                <button type="button" class="btn btn-secondary btn-sm" id="btn-clean-search"
+                    onclick="cleanID()">Clean</button>
             </div>
         </div>
 
@@ -91,16 +96,16 @@
             <button type="button" class="btn btn-secondary btn-sm" id="btn-back" onclick="back()">Back 1</button>
         </div>
 
-        <!-- Returning a todo created -->
-        <div class="box-result-todo-created">
-            <button type="button" class="btn btn-secondary btn-sm">Back 2</button>
+        <!-- Returning a todo details -->
+        <div class="box-result-todo-details">            
         </div>
 
     </main>
     <footer>
         <p>Designed by Camila Alves | Software Developer Backend Java</p>
         <p>Copyright | 2024 &copy;</p>
-    </footer>    
+    </footer>
 </body>
 <script src="js/script.js"></script>
+
 </html>
